Fix (form advanced) radio/checkbox backgrounds on iOS devices
Was showing up nearly black; made transparent to match desktop experience

--- a/src/less/addons/form-advanced.less
+++ b/src/less/addons/form-advanced.less
@@ -52,6 +52,7 @@
     /* 4 */
     -webkit-appearance: none;
     outline: 0;
+    background: transparent;
     .hook-form-advanced;
 }
 
